<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">



    //**CALORIES**//
    //Static text "Calories":
    <TextView
        android:id="@+id/calories"
        android:text="@string/Calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/resturantSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    //calories seekbar,
    <SeekBar
        android:id="@+id/barCalories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:progress="20"
        android:max="2850"
        android:layout_below="@+id/calories"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    //Variable text, showcase amount currently selected in calories seekbar
    <TextView
        android:id="@+id/textCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barCalories"
        android:textSize="18sp"
        android:layout_alignRight="@+id/barCalories"/>


    //**PROTEIN**//
    //static text, "Protein"
    <TextView
        android:id="@+id/protein"
        android:text="@string/Protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/textCalories"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    //seekbar for protein,
    <SeekBar
        android:id="@+id/barProtein"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/protein"
        android:layout_centerHorizontal="true"
        android:max="179"/>

    //variable text, showcases amount selected in protein seekbar
    <TextView
        android:id="@+id/textProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barProtein"
        android:textSize="18sp"
        android:layout_alignRight="@+id/barCalories"/>/>

    //**Carbs**//
    //static text, "Carbs"
    <TextView
        android:id="@+id/carbs"
        android:text="@string/Carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/textProtein"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    //seekbar for carbs,
    <SeekBar
        android:id="@+id/barCarbs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carbs"
        android:layout_centerHorizontal="true"
        android:max="414"/>

    //variable text, showcases amount selected in carbs seekbar
    <TextView
        android:id="@+id/textCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barCarbs"
        android:textSize="18sp"
        android:layout_alignRight="@+id/barCalories"/>/>

    //**Fat**//
    //static text, "Fat"
    <TextView
        android:id="@+id/fat"
        android:text="@string/Fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/textCarbs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    //seekbar for fat,
    <SeekBar
        android:id="@+id/barFat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fat"
        android:layout_centerHorizontal="true"
        android:max="414"/>

    //variable text, showcases amount selected in fat seekbar
    <TextView
        android:id="@+id/textFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barFat"
        android:textSize="18sp"
        android:layout_alignRight="@+id/barCalories"/>/>

    //**Fiber**//
    //static text, "Fiber"
    <TextView
        android:id="@+id/fiber"
        android:text="@string/Fiber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/textFat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    //seekbar for fiber,
    <SeekBar
        android:id="@+id/barFiber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fiber"
        android:layout_centerHorizontal="true"
        android:max="414"/> />

    //variable text, showcases amount selected in fiber seekbar
    <TextView
        android:id="@+id/textFiber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barFiber"
        android:textSize="18sp"
        android:layout_alignRight="@+id/barCalories"/>/>

    <Spinner
        android:id="@+id/resturantSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></Spinner>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FindResturantButton"
        android:id="@+id/button"
        android:onClick="showMeals"
        android:layout_below="@+id/barFiber"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Resturant:"
        android:id="@+id/textView"
        android:textColor="@color/gray"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>

</ScrollView>